# habits-tracker

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/: habits.yaml
devtools/: lint.py
src/habits_tracker/: __init__.py  config.py  habits.py  main.py  tracker.py
tests/: conftest.py  test_config.py  test_habits.py  test_main.py  test_tracker.py
